--- a/roles/webserver/templates/index.html.j2
+++ b/roles/webserver/templates/index.html.j2
@@ -19,10 +19,10 @@
 </head>
 <body>
 <h1>evoila Ansible Knowledge Challenge</h1>
-<p>Klicke auf eine Antwort, um direkt zu erfahren, ob sie richtig ist und was sie bedeutet!</p>
+<p>Klicke auf eine Antwort, um direkt zu sehen, ob sie korrekt ist und den Lösungsbuchstaben zu erhalten!</p>
 
 <ol>
-    <li>Welche Datei definiert die Zielsysteme?
+    <li>Welche Datei definiert die Zielsysteme? (<a href="https://docs.ansible.com/ansible/latest/user_guide/intro_inventory.html" target="_blank">Dokumentation</a>)
         <ul>
             <li class="answer" onclick="showExplanation(1, 'A')">A) ansible.cfg</li>
             <li class="answer" onclick="showExplanation(1, 'B')">B) inventories/hosts</li>
@@ -31,7 +31,7 @@
         <p id="explanation1"></p>
     </li>
 
-    <li>Wie nennt man die Datei, die Rollen und Hosts beschreibt?
+    <li>Wie nennt man die Datei, die Rollen und Hosts beschreibt? (<a href="https://docs.ansible.com/ansible/latest/user_guide/playbooks_intro.html" target="_blank">Dokumentation</a>)
         <ul>
             <li class="answer" onclick="showExplanation(2, 'A')">A) Playbook</li>
             <li class="answer" onclick="showExplanation(2, 'B')">B) Tasklist</li>
@@ -40,7 +40,7 @@
         <p id="explanation2"></p>
     </li>
 
-    <li>Wie heißen die Anweisungen innerhalb eines Playbooks?
+    <li>Wie heißen die Anweisungen innerhalb eines Playbooks? (<a href="https://docs.ansible.com/ansible/latest/user_guide/playbooks_intro.html#tasks-list" target="_blank">Dokumentation</a>)
         <ul>
             <li class="answer" onclick="showExplanation(3, 'A')">A) Tasks</li>
             <li class="answer" onclick="showExplanation(3, 'B')">B) Steps</li>
@@ -49,7 +49,7 @@
         <p id="explanation3"></p>
     </li>
 
-    <li>Wie heißen die wiederverwendbaren Strukturen, die Aufgaben, Variablen und Templates bündeln?
+    <li>Wie heißen die wiederverwendbaren Strukturen, die Aufgaben, Variablen und Templates bündeln? (<a href="https://docs.ansible.com/ansible/latest/user_guide/playbooks_reuse_roles.html" target="_blank">Dokumentation</a>)
         <ul>
             <li class="answer" onclick="showExplanation(4, 'A')">A) Roles</li>
             <li class="answer" onclick="showExplanation(4, 'B')">B) Bundles</li>
@@ -58,7 +58,7 @@
         <p id="explanation4"></p>
     </li>
 
-    <li>Welche Datei erzeugt Inhalte auf Basis von Variablen und Platzhaltern?
+    <li>Welche Datei erzeugt Inhalte auf Basis von Variablen und Platzhaltern? (<a href="https://docs.ansible.com/ansible/latest/collections/ansible/builtin/template_module.html" target="_blank">Dokumentation</a>)
         <ul>
             <li class="answer" onclick="showExplanation(5, 'A')">A) Template</li>
             <li class="answer" onclick="showExplanation(5, 'B')">B) Copyfile</li>
@@ -67,7 +67,7 @@
         <p id="explanation5"></p>
     </li>
 
-    <li>Welche Direktive speichert dynamische Variablen während der Laufzeit?
+    <li>Welche Direktive speichert dynamische Variablen während der Laufzeit? (<a href="https://docs.ansible.com/ansible/latest/collections/ansible/builtin/set_fact_module.html" target="_blank">Dokumentation</a>)
         <ul>
             <li class="answer" onclick="showExplanation(6, 'A')">A) set_fact</li>
             <li class="answer" onclick="showExplanation(6, 'B')">B) define_var</li>
@@ -76,7 +76,7 @@
         <p id="explanation6"></p>
     </li>
 
-    <li>Wie nennt man spezielle Tasks, die auf Änderungen reagieren?
+    <li>Wie nennt man spezielle Tasks, die auf Änderungen reagieren? (<a href="https://docs.ansible.com/ansible/latest/user_guide/playbooks_handlers.html" target="_blank">Dokumentation</a>)
         <ul>
             <li class="answer" onclick="showExplanation(7, 'A')">A) Listeners</li>
             <li class="answer" onclick="showExplanation(7, 'B')">B) Handlers</li>
@@ -85,7 +85,7 @@
         <p id="explanation7"></p>
     </li>
 
-    <li>Mit welchem Befehl kann man alle Ansible Facts eines Systems anzeigen?
+    <li>Mit welchem Befehl kann man alle Ansible Facts eines Systems anzeigen? (<a href="https://docs.ansible.com/ansible/latest/collections/ansible/builtin/setup_module.html" target="_blank">Dokumentation</a>)
         <ul>
             <li class="answer" onclick="showExplanation(8, 'A')">A) ansible -m setup</li>
             <li class="answer" onclick="showExplanation(8, 'B')">B) ansible --facts</li>
@@ -94,7 +94,7 @@
         <p id="explanation8"></p>
     </li>
 
-    <li>Wie heißt der offizielle Marktplatz für Ansible Rollen und Collections?
+    <li>Wie heißt der offizielle Marktplatz für Rollen & Collections? (<a href="https://galaxy.ansible.com/" target="_blank">Dokumentation</a>)
         <ul>
             <li class="answer" onclick="showExplanation(9, 'A')">A) Ansible Galaxy</li>
             <li class="answer" onclick="showExplanation(9, 'B')">B) Ansible Hub</li>
@@ -103,7 +103,7 @@
         <p id="explanation9"></p>
     </li>
 
-    <li>Wie heißen Pakete, die Rollen, Module und Plugins bündeln?
+    <li>Wie heißen Pakete, die Rollen, Module und Plugins bündeln? (<a href="https://docs.ansible.com/ansible/latest/dev_guide/collections_using.html" target="_blank">Dokumentation</a>)
         <ul>
             <li class="answer" onclick="showExplanation(10, 'A')">A) Bundles</li>
             <li class="answer" onclick="showExplanation(10, 'B')">B) Collections</li>
